--- a/angular.client/src/app/modules/admin/evaluation/components/questionary/questionary.component.html
+++ b/angular.client/src/app/modules/admin/evaluation/components/questionary/questionary.component.html
@@ -25,7 +25,7 @@
                     <p class="pt-2 text-sm">{{nombreEstudiante}}</p>
                     }
                 </div>
-                <button mat-stroked-button (click)="toggleFullScreen(); isConcentrationModeActive = true">
+                <button mat-stroked-button (click)="requestFullScreen(); isConcentrationModeActive = true">
                     Modo Concentración
                 </button>
             </div>
@@ -140,7 +140,7 @@
                                     {{ currentQuestionIndex + 1 }}/33
                                 </div>
                                 <div class="px-2 py-1 bg-gray-800 text-white text-sm sm:text-lg xl:text-xl rounded cursor-pointer"
-                                    (click)="toggleFullScreen(); isConcentrationModeActive = false">
+                                    (click)="exitFullScreen(); isConcentrationModeActive = false">
                                     Salir del Modo Concentración
                                 </div>
                             </div>
@@ -155,7 +155,7 @@
                                     Siguiente
                                 </button>
                                 <button *ngIf="currentQuestionIndex === preguntasPsicologicas.length - 1"
-                                    (click)="onSubmit(); isConcentrationModeActive = false; toggleFullScreen()"
+                                    (click)="onSubmit(); isConcentrationModeActive = false; exitFullScreen()"
                                     [disabled]="!(validarRespuestas(1,33)).esValido"
                                     class="bg-orange-500 hover:bg-orange-700 text-white font-bold py-1 px-2 sm:py-2 sm:px-4 lg:py-3 lg:px-6 text-sm sm:text-base xl:text-lg rounded disabled:opacity-50">
                                     Finalizar Prueba Psicologica
